Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-87157

CheckBox does not work on Android

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • None
    • 6.0
    • Quick: Controls 2
    • None
    • Android
    • 8d9819734516a2fe0853acfd0b2cfd3364465c7a (qt/qtdeclarative/dev)

    Description

      CheckBox stopped working in android after change https://codereview.qt-project.org/c/qt/qtquickcontrols2/+/315900

       

      This can be reproduced with the gallery example. Clicking on the checkbox has no effect. Reverting the change makes it work again.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            srutledg Shawn Rutledge
            tvete Paul Olav Tvete
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes